--- a/.github/workflows/action-1.yml
+++ b/.github/workflows/action-1.yml
@@ -43,7 +43,6 @@ jobs:
           echo "Build completed successfully"
           find . -name "*.dll" -type f | grep -E "(bin/Release|bin/Debug)" | head -5
 
-
   # ==============================
   # PHASE 2: TEST EXECUTION + COVERAGE
   # ==============================
@@ -60,15 +59,19 @@ jobs:
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
+      - name: Install coverlet collector
+        run: dotnet add ${{ env.TEST_PROJECT }} package coverlet.collector
+
       - name: Run unit tests with coverage
         run: |
           echo "Running unit tests with coverage..."
-          mkdir coverage
+          mkdir -p coverage
           dotnet test ${{ env.TEST_PROJECT }} \
             --configuration Release \
             /p:CollectCoverage=true \
             /p:CoverletOutput=$(pwd)/coverage/ \
-            /p:CoverletOutputFormat=opencover
+            /p:CoverletOutputFormat=cobertura \
+            /p:Include="[BP.Calculator]*"
 
       - name: Check coverage file
         run: |
@@ -86,7 +89,6 @@ jobs:
       - name: Display test summary
         run: |
           echo "All tests completed successfully."
-
 
   # ==============================
   # PHASE 3: QUALITY ANALYSIS (SONARCLOUD)
@@ -116,8 +118,8 @@ jobs:
             -Dsonar.organization=${{ secrets.SONAR_ORG }}
             -Dsonar.projectKey=krishnakothagorla04_bp-calculator-new
             -Dsonar.projectName=bp-calculator-new
-            -Dsonar.sources=.
-            -Dsonar.cs.opencover.reportsPaths=coverage/coverage.xml
+            -Dsonar.sources=BP.Calculator
+            -Dsonar.cs.opencover.reportsPaths=$(pwd)/coverage/coverage.cobertura.xml
 
       - name: Pipeline Completion
         run: |
