--- a/.github/workflows/action-2.yml
+++ b/.github/workflows/action-2.yml
@@ -16,8 +16,9 @@ on:
         - cautious
 
 env:
-  IMAGE_NAME: bp-calculator
+  IMAGE_NAME: ghcr.io/krishnakothagorla04/bp-calculator
   REGISTRY: ghcr.io
+
   # Canary Traffic Progression: 5% → 25% → 75% → 100%
   CANARY_PHASE_1: 5    # Initial canary traffic percentage
   CANARY_PHASE_2: 25   # Second phase traffic percentage
@@ -65,6 +66,19 @@ jobs:
         run: |
           docker build -t $IMAGE_NAME:${{ steps.version.outputs.docker-tag }} .
           docker build -t $IMAGE_NAME:canary-latest .
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_PAT }}
+
+      - name: Build Docker Container
+        run: |
+          docker build -t $IMAGE_NAME:${{ steps.version.outputs.docker-tag }} .
+          docker build -t $IMAGE_NAME:canary-latest .
+
       
       - name: Validate Container Health
         run: |
