--- a/.github/workflows/action-2.yml
+++ b/.github/workflows/action-2.yml
@@ -98,7 +98,7 @@ jobs:
     environment: production
     steps:
       - name: Azure Login
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
@@ -129,7 +129,7 @@ jobs:
           az container create \
             --resource-group ${{ env.RESOURCE_GROUP }} \
             --name bp-canary-phase1 \
-            --image ${{ needs.build-validation.outputs.image-uri }} \
+            --image ${{ env.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:latest \
             --cpu 1 \
             --memory 1.5 \
             --ports 8080 \
@@ -203,7 +203,7 @@ jobs:
           az container create \
             --resource-group ${{ env.RESOURCE_GROUP }} \
             --name bp-canary-phase2 \
-            --image ${{ needs.build-validation.outputs.image-uri }} \
+            --image ${{ env.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:latest \
             --cpu 1 \
             --memory 1.5 \
             --ports 8080 \
@@ -266,7 +266,7 @@ jobs:
           az container create \
             --resource-group ${{ env.RESOURCE_GROUP }} \
             --name bp-canary-phase3 \
-            --image ${{ needs.build-validation.outputs.image-uri }} \
+            --image ${{ env.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:latest \
             --cpu 1 \
             --memory 1.5 \
             --ports 8080 \
@@ -332,7 +332,7 @@ jobs:
           az container create \
             --resource-group ${{ env.RESOURCE_GROUP }} \
             --name bp-production-new \
-            --image ${{ needs.build-validation.outputs.image-uri }} \
+            --image ${{ env.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:latest \
             --cpu 1 \
             --memory 1.5 \
             --ports 8080 \
@@ -394,7 +394,7 @@ jobs:
           az container create \
             --resource-group ${{ env.RESOURCE_GROUP }} \
             --name bp-production \
-            --image ${{ needs.build-validation.outputs.image-uri }} \
+            --image ${{ env.ACR_NAME }}.azurecr.io/${{ env.IMAGE_NAME }}:latest \
             --cpu 1 \
             --memory 1.5 \
             --ports 8080 \
@@ -414,7 +414,7 @@ jobs:
     if: always()
     steps:
       - name: Azure Login
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
