--- a/.github/workflows/action-2.yml
+++ b/.github/workflows/action-2.yml
@@ -124,7 +124,7 @@ jobs:
         run: |
           echo "🚀 CANARY PHASE 1: Deploying canary version"
           echo "Traffic Simulation: ${{ env.CANARY_PHASE_1 }}% to canary"
-      
+          
           # Deploy canary container instance
           az container create \
             --resource-group ${{ env.RESOURCE_GROUP }} \
@@ -138,7 +138,8 @@ jobs:
             --restart-policy Always \
             --location ${{ env.LOCATION }} \
             --registry-username ${{ secrets.ACR_USERNAME }} \
-            --registry-password ${{ secrets.ACR_PASSWORD }}
+            --registry-password ${{ secrets.ACR_PASSWORD }} \
+            --os-type Linux
           
           # Get canary IP address
           CANARY_IP=$(az container show \
@@ -212,7 +213,10 @@ jobs:
             --dns-name-label bp-canary-phase2-${{ github.run_id }} \
             --environment-variables ASPNETCORE_ENVIRONMENT=Production CANARY_PHASE=2 \
             --restart-policy Always \
-            --location ${{ env.LOCATION }}
+            --location ${{ env.LOCATION }} \
+            --registry-username ${{ secrets.ACR_USERNAME }} \
+            --registry-password ${{ secrets.ACR_PASSWORD }} \
+            --os-type Linux
           
           # Get second canary IP
           CANARY2_IP=$(az container show \
@@ -275,7 +279,10 @@ jobs:
             --dns-name-label bp-canary-phase3-${{ github.run_id }} \
             --environment-variables ASPNETCORE_ENVIRONMENT=Production CANARY_PHASE=3 \
             --restart-policy Always \
-            --location ${{ env.LOCATION }}
+            --location ${{ env.LOCATION }} \
+            --registry-username ${{ secrets.ACR_USERNAME }} \
+            --registry-password ${{ secrets.ACR_PASSWORD }} \
+            --os-type Linux
           
           # Get third canary IP
           CANARY3_IP=$(az container show \
@@ -341,7 +348,10 @@ jobs:
             --dns-name-label bp-production-${{ github.run_id }} \
             --environment-variables ASPNETCORE_ENVIRONMENT=Production \
             --restart-policy Always \
-            --location ${{ env.LOCATION }}
+            --location ${{ env.LOCATION }} \
+            --registry-username ${{ secrets.ACR_USERNAME }} \
+            --registry-password ${{ secrets.ACR_PASSWORD }} \
+            --os-type Linux
           
           # Get new production IP
           NEW_PROD_IP=$(az container show \
@@ -403,7 +413,10 @@ jobs:
             --dns-name-label bp-production-final-${{ github.run_id }} \
             --environment-variables ASPNETCORE_ENVIRONMENT=Production \
             --restart-policy Always \
-            --location ${{ env.LOCATION }}
+            --location ${{ env.LOCATION }} \
+            --registry-username ${{ secrets.ACR_USERNAME }} \
+            --registry-password ${{ secrets.ACR_PASSWORD }} \
+            --os-type Linux
           
           echo "✅ Cleanup complete!"
 
