--- a/.github/workflows/action-2.yml
+++ b/.github/workflows/action-2.yml
@@ -122,7 +122,7 @@ jobs:
       - name: Deploy Canary Phase 1 (5% Simulation)
         id: deploy-canary-phase1
         run: |
-          echo "🚀 CANARY PHASE 1: Deploying canary version"
+          echo " CANARY PHASE 1: Deploying canary version"
           echo "Traffic Simulation: ${{ env.CANARY_PHASE_1 }}% to canary"
           
           # Deploy canary container instance
@@ -156,10 +156,10 @@ jobs:
           
           for i in {1..15}; do
             if curl -s -f http://$CANARY_IP:8080/health > /dev/null; then
-              echo "✅ Canary Phase 1 is healthy!"
+              echo " Canary Phase 1 is healthy!"
               break
             fi
-            echo "⏳ Waiting for canary... Attempt $i/15"
+            echo " Waiting for canary... Attempt $i/15"
             sleep 4
           done
           
@@ -167,11 +167,11 @@ jobs:
           echo "Testing canary functionality..."
           curl -X POST http://$CANARY_IP:8080/api/bp/calculate \
             -H "Content-Type: application/json" \
-            -d '{"Systolic":120,"Diastolic":80}' && echo "✅ Canary functionality verified"
+            -d '{"Systolic":120,"Diastolic":80}' && echo "Canary functionality verified"
 
       - name: Monitor Canary Phase 1 (5% Traffic Simulation)
         run: |
-          echo "📊 Monitoring Canary Phase 1 (${{ env.CANARY_PHASE_1 }}% traffic simulation)"
+          echo " Monitoring Canary Phase 1 (${{ env.CANARY_PHASE_1 }}% traffic simulation)"
           echo "Duration: 120 seconds"
           
           CANARY_IP=${{ steps.deploy-canary-phase1.outputs.CANARY_IP }}
@@ -199,7 +199,7 @@ jobs:
       - name: Deploy Canary Phase 2 (25% Simulation)
         id: deploy-canary-phase2
         run: |
-          echo "📈 CANARY PHASE 2: Scaling canary presence"
+          echo " CANARY PHASE 2: Scaling canary presence"
           echo "Traffic Simulation: ${{ env.CANARY_PHASE_2 }}% to canary"
           
           # Deploy second canary instance for increased capacity
@@ -227,7 +227,7 @@ jobs:
 
       - name: Monitor Canary Phase 2 (25% Traffic Simulation)
         run: |
-          echo "📊 Monitoring Canary Phase 2 (${{ env.CANARY_PHASE_2 }}% traffic simulation)"
+          echo "Monitoring Canary Phase 2 (${{ env.CANARY_PHASE_2 }}% traffic simulation)"
           echo "Duration: 180 seconds"
           
           CANARY1_IP=${{ steps.deploy-canary-phase1.outputs.CANARY_IP }}
@@ -250,7 +250,7 @@ jobs:
             
             # Test business logic every 3rd interval
             if [ $((i % 3)) -eq 0 ]; then
-              echo "  🧪 Testing canary functionality..."
+              echo "   Testing canary functionality..."
               curl -s -X POST http://$CANARY1_IP:8080/api/bp/calculate \
                 -H "Content-Type: application/json" \
                 -d '{"Systolic":130,"Diastolic":85}' > /dev/null && echo "    Canary 1 OK" || true
@@ -265,7 +265,7 @@ jobs:
       - name: Deploy Canary Phase 3 (75% Simulation)
         id: deploy-canary-phase3
         run: |
-          echo "🔥 CANARY PHASE 3: Majority traffic shift"
+          echo " CANARY PHASE 3: Majority traffic shift"
           echo "Traffic Simulation: ${{ env.CANARY_PHASE_3 }}% to canary"
           
           # Deploy third canary instance
@@ -293,7 +293,7 @@ jobs:
 
       - name: Monitor Canary Phase 3 (75% Traffic Simulation)
         run: |
-          echo "📊 Monitoring Canary Phase 3 (${{ env.CANARY_PHASE_3 }}% traffic simulation)"
+          echo " Monitoring Canary Phase 3 (${{ env.CANARY_PHASE_3 }}% traffic simulation)"
           echo "Duration: 240 seconds"
           
           CANARY1_IP=${{ steps.deploy-canary-phase1.outputs.CANARY_IP }}
@@ -316,7 +316,7 @@ jobs:
             
             # Comprehensive test every 4th interval
             if [ $((i % 4)) -eq 0 ]; then
-              echo "  🧪 Comprehensive functionality test..."
+              echo "   Comprehensive functionality test..."
               for canary_ip in $CANARY1_IP $CANARY2_IP $CANARY3_IP; do
                 curl -s -X POST http://$canary_ip:8080/api/bp/calculate \
                   -H "Content-Type: application/json" \
@@ -334,7 +334,7 @@ jobs:
       - name: Deploy Final Production Version
         id: deploy-final-production
         run: |
-          echo "🎯 FINAL PHASE: Deploying new production version"
+          echo " FINAL PHASE: Deploying new production version"
           echo "Traffic: 100% to new version"
           
           # Deploy new production container
@@ -364,17 +364,17 @@ jobs:
           echo "Verifying new production health..."
           for i in {1..10}; do
             if curl -s -f http://$NEW_PROD_IP:8080/health > /dev/null; then
-              echo "✅ New production is healthy!"
+              echo " New production is healthy!"
               break
             fi
-            echo "⏳ Waiting for new production... Attempt $i/10"
+            echo " Waiting for new production... Attempt $i/10"
             sleep 3
           done
 
       - name: Cleanup Old Resources
         if: always()
         run: |
-          echo "🧹 Cleaning up old resources..."
+          echo " Cleaning up old resources..."
           
           # Delete old production container if it exists
           if [ "${{ steps.check-existing.outputs.EXISTING_PRODUCTION }}" = "true" ]; then
@@ -418,7 +418,7 @@ jobs:
             --registry-password ${{ secrets.ACR_PASSWORD }} \
             --os-type Linux
           
-          echo "✅ Cleanup complete!"
+          echo " Cleanup complete!"
 
   # =====================
   # DEPLOYMENT SUMMARY
@@ -437,8 +437,8 @@ jobs:
 
       - name: Generate Deployment Report
         run: |
-          echo "# 🚀 Azure Canary Deployment Complete!"
-          echo "## 📋 Deployment Details"
+          echo "#  Azure Canary Deployment Complete!"
+          echo "##  Deployment Details"
           echo "- **Application**: BP Calculator"
           echo "- **Resource Group**: ${{ env.RESOURCE_GROUP }}"
           echo "- **Region**: ${{ env.LOCATION }}"
@@ -446,7 +446,7 @@ jobs:
           echo "- **Traffic Progression**: ${{ env.CANARY_PHASE_1 }}% → ${{ env.CANARY_PHASE_2 }}% → ${{ env.CANARY_PHASE_3 }}% → 100%"
           echo "- **Total Monitoring Time**: 540 seconds (9 minutes)"
           echo ""
-          echo "## ✅ Azure Resources Status"
+          echo "##  Azure Resources Status"
           
           # List all containers in the resource group
           echo "Active Containers:"
@@ -456,7 +456,7 @@ jobs:
             -o table
           
           echo ""
-          echo "## 🔗 Access Information"
+          echo "##  Access Information"
           PROD_INFO=$(az container show \
             --resource-group ${{ env.RESOURCE_GROUP }} \
             --name bp-production \
@@ -470,7 +470,7 @@ jobs:
           echo "- **Health Check**: http://$PROD_IP:8080/health"
           echo "- **API Endpoint**: http://$PROD_IP:8080/api/bp/calculate"
           echo ""
-          echo "## 🎯 Test Your Deployment"
+          echo "##  Test Your Deployment"
           echo "Run these commands to verify:"
           echo '```bash'
           echo "# Health check"
@@ -482,7 +482,7 @@ jobs:
           echo '  -d '\''{"Systolic":120,"Diastolic":80}'\'''
           echo '```'
           echo ""
-          echo "## 💡 Next Steps"
+          echo "##  Next Steps"
           echo "1. Configure custom domain (if needed)"
           echo "2. Set up Azure Monitor alerts"
           echo "3. Configure auto-scaling based on traffic"
